tests/NormalTests/paczka1/fuzzy1/36842832.err
Error in line 8: 4fLj1k S743 52,0
Error in line 18: y8ZxyvIVNe S885 -6,1
Error in line 15: y8ZxyvIVNe S885 98,2
Error in line 23: LHSNKtoT S885 53,16
Error in line 25: XeRQp8VmM4f S440 99,5
Error in line 20: LHSNKtoT S440 70,1
Error in line 28: LHSNKtoT A156 19,6
